force-app/main/default/objects/Configuration_Item__c/Configuration_Item__c.object-meta.xml
<CustomObject>
    <description>List of configuration items that were created or updated to deliver specific functionality.</description>
    <label>Configuration Item</label>
    <nameField>
        <displayFormat>CON-{0000000}</displayFormat>
        <label>Configuration Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>