force-app/main/default/objects/Configuration_Item__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>