force-app/main/default/objects/Configuration_Item__c/fields/Item_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_API_Name__c</fullName>
    <inlineHelpText>Item API Name</inlineHelpText>
    <label>Item API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>