force-app/main/default/objects/Configuration_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Action Layout</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Approval Step</fullName>
            </value>
            <value>
                <fullName>Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Button Override</fullName>
            </value>
            <value>
                <fullName>Case Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Case Team Member Role</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>Compact Layout Assignment</fullName>
            </value>
            <value>
                <fullName>Contact Action</fullName>
            </value>
            <value>
                <fullName>CSV Parser</fullName>
            </value>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Custom Label</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type Record</fullName>
            </value>
            <value>
                <fullName>Custom Notification Type</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Custom Permission</fullName>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
            <value>
                <fullName>Custom Setting Record</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Document Folder</fullName>
            </value>
            <value>
                <fullName>Duplicate Rule</fullName>
            </value>
            <value>
                <fullName>Email Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>