force-app/main/default/objects/Configuration_Item__c/fields/Related_Object_or_CMT__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_or_CMT__c</fullName>
    <label>Related Object or CMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>