force-app/main/default/objects/Configuration_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Type__c</columns>
    <columns>Item_API_Name__c</columns>
    <columns>Function__c</columns>
    <columns>Related_Object_or_CMT__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>